Add concrete factory, prelude and variable rename factory to ExpressionTypechecker