@@ -45,7 +45,7 @@ public class LinearSolver {
     errorReporter = typechecker.getErrorReporter();
     this.marker = marker;
     this.ext = ext;
-    factory = ext.factory.withData(marker);
+    factory = typechecker.getFactory().withData(marker);
   }
 
   private CoreClassDefinition getInstanceClass() {
@@ -118,11 +118,11 @@ public class LinearSolver {
     }
 
     if (relationData.defCall.getDefinition() == ext.equationMeta.linearOrederLeq) {
-      return new Hypothesis<>(expr, relationData.defCall.getDefCallArguments().get(0), Equation.Operation.LESS_OR_EQUALS, relationData.leftExpr, relationData.rightExpr, BigInteger.ONE);
+      return new Hypothesis<>(expr, relationData.defCall.getDefCallArguments().getFirst(), Equation.Operation.LESS_OR_EQUALS, relationData.leftExpr, relationData.rightExpr, BigInteger.ONE);
     }
 
     if (relationData.defCall.getDefinition() == ext.equationMeta.addGroupLess) {
-      CoreExpression instance = relationData.defCall.getDefCallArguments().get(0);
+      CoreExpression instance = relationData.defCall.getDefCallArguments().getFirst();
       TypedExpression typedInstance = instance.computeTyped();
       CoreExpression instanceType = typedInstance.getType().normalize(NormalizationMode.WHNF);
       if (!(instanceType instanceof CoreClassCallExpression classCall && classCall.getDefinition().isSubClassOf(getInstanceClass()))) {
@@ -289,18 +289,18 @@ public class LinearSolver {
   }
 
   private ConcreteExpression equationsToConcrete(List<? extends Hypothesis<CompiledTerm>> equations) {
-    ConcreteExpression result = factory.ref(ext.prelude.getEmptyArrayRef());
+    ConcreteExpression result = factory.ref(typechecker.getPrelude().getEmptyArrayRef());
     for (int i = equations.size() - 1; i >= 0; i--) {
-      result = factory.app(factory.ref(ext.prelude.getArrayConsRef()), true, equationToConcrete(equations.get(i)), result);
+      result = factory.app(factory.ref(typechecker.getPrelude().getArrayConsRef()), true, equationToConcrete(equations.get(i)), result);
     }
     return result;
   }
 
   private ConcreteExpression witnessesToConcrete(List<? extends Hypothesis<CompiledTerm>> hypotheses) {
-    ConcreteExpression result = factory.ref(ext.prelude.getEmptyArrayRef());
+    ConcreteExpression result = factory.ref(typechecker.getPrelude().getEmptyArrayRef());
     for (int i = hypotheses.size() - 1; i >= 0; i--) {
       if (hypotheses.get(i).proof != null) {
-        result = factory.app(factory.ref(ext.prelude.getArrayConsRef()), true, hypotheses.get(i).proof, result);
+        result = factory.app(factory.ref(typechecker.getPrelude().getArrayConsRef()), true, hypotheses.get(i).proof, result);
       }
     }
     return result;
@@ -308,11 +308,11 @@ public class LinearSolver {
 
   private ConcreteExpression certificateToConcrete(List<BigInteger> certificate, List<Equation<CompiledTerm>> equations) {
     assert certificate.size() == equations.size();
-    ConcreteExpression result = factory.ref(ext.prelude.getEmptyArrayRef());
+    ConcreteExpression result = factory.ref(typechecker.getPrelude().getEmptyArrayRef());
     for (int i = certificate.size() - 1; i >= 1; i--) {
-      result = factory.app(factory.ref(ext.prelude.getArrayConsRef()), true, factory.number(certificate.get(i).multiply(equations.get(i).getLCM())), result);
+      result = factory.app(factory.ref(typechecker.getPrelude().getArrayConsRef()), true, factory.number(certificate.get(i).multiply(equations.get(i).getLCM())), result);
     }
-    return factory.tuple(result, factory.number(certificate.get(0)), factory.ref(ext.prelude.getIdpRef()), factory.app(factory.ref(ext.prelude.getIdpRef()), factory.arg(factory.ref(ext.Bool.getRef()), false), factory.arg(factory.ref(ext.true_.getRef()), false)));
+    return factory.tuple(result, factory.number(certificate.getFirst()), factory.ref(typechecker.getPrelude().getIdpRef()), factory.app(factory.ref(typechecker.getPrelude().getIdpRef()), factory.arg(factory.ref(ext.Bool.getRef()), false), factory.arg(factory.ref(ext.true_.getRef()), false)));
   }
 
   private <E> void removeUnusedVariables(List<Hypothesis<CompiledTerm>> hypotheses, List<E> values) {
@@ -330,9 +330,9 @@ public class LinearSolver {
 
   private ConcreteExpression makeData(CoreClassCallExpression classCall, ConcreteExpression instanceArg, RingKind kind, List<CoreExpression> valueList) {
     boolean isRing = kind != RingKind.NAT && kind != RingKind.NONE || classCall.getDefinition().isSubClassOf(ext.equationMeta.OrderedRing);
-    ConcreteExpression varsArg = factory.ref(ext.prelude.getEmptyArrayRef());
+    ConcreteExpression varsArg = factory.ref(typechecker.getPrelude().getEmptyArrayRef());
     for (int i = valueList.size() - 1; i >= 0; i--) {
-      varsArg = factory.app(factory.ref(ext.prelude.getArrayConsRef()), true, valueList.get(i) == null ? factory.ref(ext.zro.getRef()) : factory.core(valueList.get(i).computeTyped()), varsArg);
+      varsArg = factory.app(factory.ref(typechecker.getPrelude().getArrayConsRef()), true, valueList.get(i) == null ? factory.ref(ext.zro.getRef()) : factory.core(valueList.get(i).computeTyped()), varsArg);
     }
     return factory.newExpr(factory.classExt(factory.ref((kind == RingKind.RAT_ALG ? ext.linearSolverMeta.LinearRatAlgebraData : kind == RingKind.RAT ? ext.linearSolverMeta.LinearRatData : isRing ? ext.linearSolverMeta.LinearRingData : ext.linearSolverMeta.LinearSemiringData).getRef()), Arrays.asList(factory.implementation((ext.equationMeta.RingDataCarrier).getRef(), instanceArg), factory.implementation(ext.equationMeta.DataFunction.getRef(), varsArg))));
   }
@@ -369,9 +369,9 @@ public class LinearSolver {
   }
 
   private Hypothesis<CoreExpression> natToIntHypothesis(Hypothesis<CoreExpression> rule, CoreExpression instance) {
-    CoreExpression newLHS = TermCompiler.toPos(rule.lhsTerm, typechecker, factory, ext);
-    CoreExpression newRHS = TermCompiler.toPos(rule.rhsTerm, typechecker, factory, ext);
-    return newLHS == null || newRHS == null ? null : new Hypothesis<>(rule.operation == Equation.Operation.EQUALS ? factory.app(factory.ref(ext.pmap.getRef()), true, factory.ref(ext.prelude.getPosRef()), rule.proof) : factory.app(factory.ref(rule.operation == Equation.Operation.LESS ? ext.linearSolverMeta.posLpos.getRef() : ext.linearSolverMeta.posLEpos.getRef()), true, rule.proof), instance, rule.operation, newLHS, newRHS, rule.lcm);
+    CoreExpression newLHS = TermCompiler.toPos(rule.lhsTerm, typechecker, factory);
+    CoreExpression newRHS = TermCompiler.toPos(rule.rhsTerm, typechecker, factory);
+    return newLHS == null || newRHS == null ? null : new Hypothesis<>(rule.operation == Equation.Operation.EQUALS ? factory.app(factory.ref(ext.pmap.getRef()), true, factory.ref(typechecker.getPrelude().getPosRef()), rule.proof) : factory.app(factory.ref(rule.operation == Equation.Operation.LESS ? ext.linearSolverMeta.posLpos.getRef() : ext.linearSolverMeta.posLEpos.getRef()), true, rule.proof), instance, rule.operation, newLHS, newRHS, rule.lcm);
   }
 
   private Hypothesis<CoreExpression> intToRatHypothesis(Hypothesis<CoreExpression> rule, CoreExpression instance) {
@@ -523,13 +523,13 @@ public class LinearSolver {
           boolean found = false;
           for (int i = 0; i < rulesSet.size(); i++) {
             List<Hypothesis<CoreExpression>> newRules = rulesSet.get(i);
-            Boolean compareResult = Utils.tryWithSavedState(tc, tc2 -> tc2.compare(rule.instance, newRules.get(0).instance, CMP.EQ, marker, false, true, false));
+            Boolean compareResult = Utils.tryWithSavedState(tc, tc2 -> tc2.compare(rule.instance, newRules.getFirst().instance, CMP.EQ, marker, false, true, false));
             if (compareResult != null && compareResult) {
               newRules.add(rule);
               found = true;
               break;
             } else if (kind != RingKind.NAT) {
-              RingKind newKind = BaseTermCompiler.getTermCompilerKind(newRules.get(0).instance, ext.equationMeta);
+              RingKind newKind = BaseTermCompiler.getTermCompilerKind(newRules.getFirst().instance, ext.equationMeta);
               if (kind == RingKind.NONE && newKind != RingKind.RAT || newKind == RingKind.NONE || kind.ordinal() > newKind.ordinal() && !(newKind == RingKind.RAT && kind == RingKind.NONE)) {
                 found = true;
                 List<Hypothesis<CoreExpression>> newRules2 = new ArrayList<>(newRules.size() + 1);
@@ -558,7 +558,7 @@ public class LinearSolver {
           }
         }
         for (List<Hypothesis<CoreExpression>> equations : rulesSet) {
-          TypedExpression instance = equations.get(0).instance.computeTyped();
+          TypedExpression instance = equations.getFirst().instance.computeTyped();
           CoreClassCallExpression classCall = Utils.getClassCall(instance.getType());
           TermCompiler compiler = makeTermCompiler(instance, classCall);
           if (compiler == null) continue;
